nacos-server/openshift/mysql.yaml
---
kind: List
apiVersion: v1
items:
- kind: Service
  apiVersion: v1
  metadata:
    name: nacos-mysql
    labels:
      name: nacos-mysql
  spec:
    ports:
    - port: 3306
      targetPort: 3306
    selector:
      name: nacos-mysql

- kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: nacos-mysql-pvc
    labels:
      app: nacos-mysql
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 5Gi

- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    name: nacos-mysql
    labels:
      app: nacos-mysql
      app.kubernetes.io/part-of: datatier
  spec:
    strategy:
      type: Recreate
    triggers:
    - type: ConfigChange
    replicas: 1
    selector:
      name: nacos-mysql
    template:
      metadata:
        labels:
          name: nacos-mysql
          app: nacos-mysql
      spec:
        containers:
        - name: mysql
          image: nacos/nacos-mysql:5.7
          ports:
          - containerPort: 3306
            protocol: TCP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - MYSQL_PWD="$MYSQL_PASSWORD" mysqladmin -u $MYSQL_USER ping
            initialDelaySeconds: 5
            timeoutSeconds: 1
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - MYSQL_PWD="$MYSQL_PASSWORD" mysqladmin -u $MYSQL_USER ping
          volumeMounts:
          - name: mysql-data
            mountPath: /var/lib/mysql
          terminationMessagePath: "/dev/termination-log"
          imagePullPolicy: IfNotPresent
          capabilities: {}
          securityContext:
            capabilities: {}
            privileged: false
        volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: nacos-mysql-pvc
        restartPolicy: Always
        dnsPolicy: ClusterFirst
