nacos-server/openshift/nacos.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-service
  labels:
    app: nacos-server
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 7848
      name: rpc
      targetPort: 7848
  clusterIP: None
  selector:
    app: nacos-server
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-server
  labels:
    app: nacos-server
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 7848
      name: rpc
      targetPort: 7848
  selector:
    app: nacos-server
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: nacos-server
  name: nacos-server
spec:
  path: /nacos
  port:
    targetPort: 8848
  to:
    kind: Service
    name: nacos-server

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos-server
spec:
  serviceName: nacos-service
  replicas: 3
  template:
    metadata:
      labels:
        app: nacos-server
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      securityContext:
        runAsUser: 0
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: nacos-server
      containers:
        - name: nacos-server
          imagePullPolicy: Always
          image: nacos/nacos-server:2.0.0
          resources:
            requests:
              memory: "1Gi"
              cpu: "200m"
          ports:
            - containerPort: 8848
              name: client-port
            - containerPort: 7848
              name: rpc
          volumeMounts:
            - name: plugindir
              mountPath: /home/nacos/plugins/peer-finder
            - name: datadir
              mountPath: /home/nacos/data
            - name: logdir
              mountPath: /home/nacos/logs
  volumeClaimTemplates:
    - metadata:
        name: plugindir
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: datadir
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: logdir
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
  selector:
    matchLabels:
      app: nacos-server
---
  allowHostDirVolumePlugin: true
  allowHostIPC: false
  allowHostNetwork: false
  allowHostPID: false
  allowHostPorts: false
  allowPrivilegeEscalation: true
  allowPrivilegedContainer: true
  allowedCapabilities: null
  apiVersion: security.openshift.io/v1
  defaultAddCapabilities: null
  fsGroup:
    type: RunAsAny
  groups: []
  kind: SecurityContextConstraints
  metadata:
    name: nacos-server
  priority: null
  readOnlyRootFilesystem: false
  requiredDropCapabilities: null
  runAsUser:
    type: RunAsAny
  seLinuxContext:
    type: RunAsAny
  supplementalGroups:
    type: RunAsAny
  users:
  - system:serviceaccount:spring-cloud-alibaba:nacos-server
  volumes:
  - '*'
